# open-wearables

mcp/app/: main.py
mcp/app/services/: api_client.py
mcp/app/tools/: body.py  sleep.py  timeseries.py
ow_mcp/: README.md  ow_mcp.db  pyproject.toml  test_ow_mcp.db  test_ow_mcp_auth.db
ow_mcp/app/: __init__.py  config.py  database.py  main.py  mcp_server.py  utils.py
ow_mcp/app/api/: dependencies.py
ow_mcp/app/api/routes/: __init__.py  auth.py  connection.py  ui.py
ow_mcp/app/models/: __init__.py  connection.py
ow_mcp/app/repositories/: __init__.py  connection_repository.py
ow_mcp/app/schemas/: auth.py  connection.py  errors.py
ow_mcp/app/services/: backend_client.py  crypto_service.py  google_oauth.py  mcp_auth.py  session_resolver.py  tool_execution_guard.py
ow_mcp/app/tools/: __init__.py  activity.py  body.py  sleep.py  timeseries.py  users.py  workouts.py
ow_mcp/config/: .env.example
ow_mcp/tests/: test_auth_google_session.py  test_connection_api.py  test_mcp_oauth.py  test_onboarding_ui.py  test_remote_activity_sleep.py  test_remote_get_users.py  test_remote_sessions_workouts_body.py  test_remote_timeseries.py
